# yuzu

./: .gitignore  README.md  main.py  mypy.ini  pyproject.toml
.github/workflows/: pythonapp.yml
protos/: collector.proto
yuzu/: __main__.py  application.py  collector.py  collector_pb2.py  collector_pb2_grpc.py  monitor.py
yuzu/pb/: collector_pb2.py  collector_pb2.pyi
