[tool.poetry]
name = "elastic-workflow"
version = "0.1.0"
description = ""
authors = ["Keichi Takahashi <keichi.t@me.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
flake8-awesome = "^1.2.1"
mypy = "^0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
