[tool.poetry]
name = "yuzu"
version = "0.1.0"
description = ""
authors = ["Keichi Takahashi <keichi.t@me.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
grpcio = "^1.28.1"
grpcio-tools = "^1.28.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
mypy = "^0.770"
pep8-naming = "^0.10.0"
flake8-isort = "^3.0.0"
flake8-comprehensions = "^3.2.2"
flake8-builtins = "^1.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
